tests/errors/semantic/blocking/LIST_OF_TUPLES.py
# pylint: disable=missing-function-docstring, missing-module-docstring
# Raises an error
t = [(a1, False, c1)  for a1 in range(1,30) for b1 in range(a1,30) for c1 in range(b1,1000)]
